# Clas12_Analysis

./: .gitignore  README.md
RecEff/: CMakeLists.txt  library.h
RecEff/AnaCodes/: Analysis.cc  Analysis_beforereducing.cc  CMakeLists.txt  Compare_Rec_Red.py  Eff_plot_lum.cc  Eff_plot_lum_aiTracking.cc  Eff_plots.cc  Reducer.cc  Reducer_TBTracks2.cc
RecEff/include/: RecEffTools.h
RecEff/src/: RecEffTools.cc
